# comboom_punkt_sucht_native_wallpaper

./: .clang-format  .gitignore  .gitmodules  ASSETS_README.md  BUILD.md  CMakeLists.txt  DESKTOP_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  JUSTFILE.md  Justfile  Logo.af  Makefile  RAYLIB_BUILD.md  README.md  RELEASE.md  comboom_punkt_sucht_native_wallpaper.code-workspace  flag.h  link.sh  main.cpp  nob.c  nob.h  package.json  vcpkg.json  vercell_build.sh
.github/workflows/: release-native-apps.yml
.husky/: post-commit  pre-commit
.run/: Build Debug.run.xml  Build Release.run.xml
Linux/: CMakeLists.txt
Linux-Windows-shared/src/: assets_loader.cpp  assets_loader.hpp  main_raylib.cpp  renderer_raylib.cpp  renderer_raylib.hpp  system_tray.hpp  system_tray_linux.cpp  system_tray_windows.cpp  wallpaper_app.cpp  wallpaper_app.hpp
Linux/src/: main.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp  wallpaper_engine.cpp  wallpaper_engine.hpp  window_manager.cpp  window_manager.hpp
Linux/src/linux/: system_tray_linux.cpp
Linux/src/shaders/: particle.frag.glsl  particle.vert.glsl
MacOS/: comboom-sucht-Live-Wallpaper-Info.plist
MacOS/comboom.sucht Live Wallpaper/: Bridging-Header.h  EngineManager.swift  MetalWallpaperView.swift  Particles.metal  Renderer.swift  TextOverlayView.swift  WallpaperWindow.swift  comboom_sucht_Live_WallpaperApp.swift
MacOS/comboom.sucht Live Wallpaper.xcodeproj/: project.pbxproj
MacOS/comboom.sucht Live Wallpaper.xcodeproj/project.xcworkspace/xcuserdata/mahd.xcuserdatad/: UserInterfaceState.xcuserstate
MacOS/comboom.sucht Live Wallpaper.xcodeproj/xcshareddata/xcschemes/: comboom.sucht Live Wallpaper.xcscheme
MacOS/comboom.sucht Live Wallpaper.xcodeproj/xcuserdata/mahd.xcuserdatad/xcschemes/: xcschememanagement.plist
MacOS/comboom.sucht Live Wallpaper/Appicon.icon/: icon.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/AccentColor.colorset/: Contents.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/bd_logo.imageset/: Contents.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/cbps_logo.imageset/: Contents.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/fabelke_logo.imageset/: Contents.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/knuddelzwerck_logo.imageset/: Contents.json
MacOS/comboom.sucht Live Wallpaper/Assets.xcassets/mahd_logo.imageset/: Contents.json
WASM/: README.md  package.json  svelte.config.ts  vite.config.ts
WASM/src/: app.html
WASM/src/lib/components/: ReloadPrompt.svelte  Scene.svelte
WASM/src/routes/: +layout.svelte  +page.svelte  layout.css
WASM/static/: cbps_we_core.wasm
Windows/: CMakeLists.txt
Windows/src/windows/: system_tray_windows.cpp
assets/shaders/: gradient.fs  gradient.vs  particle.fs  particle.vs
core/: cbps_wallpaper_engine_core.c  cbps_wallpaper_engine_core.h
src/: constants.hpp  desktop_wallpaper.hpp  main.cpp  nord.hpp
web_src/: shell.html
